# koka-zero

./: .git-blame-ignore-revs  .gitignore  .ocamlformat  Dockerfile  LICENSE  Makefile  README.md  compile.sh  dune  dune-project  dune-workspace  koka-LICENSE  koka-zero-config.sexp  koka-zero.opam  plan.txt
lib/: dune  koka_zero.ml  koka_zero.mli  lexer.mll  parser.mly  source_location.mli  static_error.ml  static_error.mli  syntax.ml  syntax.mli
lib/code-generation/: codegen.ml  codegen.mli  codegen_error.ml  codegen_error.mli  compile.ml  compile.mli  context.ml  context.mli  dune  function_repr.ml  function_repr.mli  helpers.ml  helpers.mli  import.ml  koka_zero_code_generation.ml  koka_zero_code_generation.mli  runtime.c  runtime.h  runtime.ml  runtime.mli  symbol_name.ml  symbol_name.mli  types.ml  types.mli
lib/codegen/: codegen.ml  codegen.mli  codegen_error.ml  codegen_error.mli  compile.ml  dune  effect_repr.ml  effect_repr.mli  import.mli  runtime.c  runtime.h  runtime.ml  runtime.mli  types.ml  types.mli
lib/evidence-translation/: bind_inlining.ml  bind_inlining.mli  dune  evidence_passing_syntax.ml  evidence_passing_syntax.mli  free_variables.ml  free_variables.mli  generation.ml  generation.mli  import.ml  import.mli  koka_zero_evidence_translation.ml  koka_zero_evidence_translation.mli  koka_zero_translation.ml  koka_zero_translation.mli  maybe_effectful.ml  maybe_effectful.mli  modified.ml  modified.mli  pretty_print.ml  pretty_print.mli  primitives.ml  primitives.mli  rewriting.ml  rewriting.mli  rewriting_utils.ml  rewriting_utils.mli  translation.ml  translation.mli
lib/execution/interpreter/: eval.ml  eval.mli  import.ml  interpreter.ml  interpreter.mli  koka_zero_interpreter.ml  runtime_error.ml  runtime_error.mli  typecast.ml  typecast.mli  value.ml  value.mli
lib/execution/prelude/: prelude.kk
lib/execution/runtime/: runtime.c  runtime.h
lib/inference/: context.ml  context.mli  dune  effect.ml  effect.mli  effect_signature.ml  effect_signature.mli  explicit_syntax.ml  explicit_syntax.mli  import.ml  infer.ml  infer.mli  inference.ml  inference.mli  koka_zero_inference.ml  koka_zero_inference.mli  minimal_syntax.ml  minimal_syntax.mli  name_source.ml  name_source.mli  operation_shape.ml  operation_shape.mli  substitution.ml  substitution.mli  type.ml  type.mli  variable.ml  variable.mli
lib/interpreter/: dune  eval.ml  eval.mli  import.ml  interpreter.ml  interpreter.mli  koka_zero_interpreter.ml  koka_zero_interpreter.mli  runtime_error.ml  runtime_error.mli  typecast.ml  typecast.mli  value.ml  value.mli
lib/ir/00-common/: constructor.ml  effect.ml  effect.mli  effect_decl.ml  import.ml  keyword.mli  literal.ml  name_source.ml  name_source_intf.ml  operator.ml  parameter.ml  parameter.mli  pattern.ml  pattern.mli  polar_type.ml  polar_type.mli  type.ml  type.mli
lib/ir/01-full-syntax/: syntax.ml  syntax.mli
lib/ir/01-minimal-syntax/: dune  import.ml  minimal_syntax.ml  minimal_syntax.mli
lib/ir/03-explicit-syntax/: dune  explicit_syntax.ml  explicit_syntax.mli
lib/ir/04-evidence-passing-syntax/: dune  evidence_passing_syntax.ml  evidence_passing_syntax.mli  free_variables.ml  primitive_names.ml  primitive_names.mli
lib/ir/common/: dune  effect.mli  effect_decl.mli  keyword.ml  name_source.mli  operation_shape.mli  operator.mli  parameter.ml  parameter.mli  type.ml  variable.ml  variable.mli
lib/ir/evidence-passing-syntax/: evidence_passing_syntax.mli  free_variables.mli  import.ml
lib/ir/explicit-syntax/: explicit_syntax.ml  explicit_syntax.mli
lib/ir/full-syntax/: dune  syntax.ml  syntax.mli
lib/ir/minimal-syntax/: minimal_syntax.ml
lib/parsing/: dune  import.ml  koka_zero_parsing.ml  koka_zero_parsing.mli  lexer.mll  parser.mly  restriction.ml  restriction.mli  simplification.ml  simplification.mli  syntax.ml  syntax.mli
lib/phases/01-parsing/: dune  koka_zero_parsing.ml  lexer.mll  parser.mly  simplification.ml  simplification.mli
lib/phases/02-inference/: context.mli  infer.ml  infer.mli  inference.ml  koka_zero_inference.mli  substitution.ml
lib/phases/02-subtyping-inference/: bounds.ml  bounds.mli  constraint.ml  constraint.mli  constraints.ml  constraints.mli  context.ml  context.mli  dot_graph.ml  dot_graph.mli  dune  expansion.ml  expansion.mli  import.ml  infer.ml  infer.mli  koka_zero_subtyping_inference.ml  koka_zero_subtyping_inference.mli  metavariables.ml  metavariables.mli  polar_type.ml  polar_type.mli
lib/phases/04-code-generation/: calling_convention.ml  calling_convention.mli  codegen.ml  codegen_error.ml  codegen_error.mli  compile.ml  compile.mli  context.ml  context.mli  control_flow.ml  control_flow.mli  ctl_repr.ml  ctl_repr.mli  dune  effect_repr.ml  effect_repr.mli  function_repr.ml  function_repr.mli  helpers.ml  helpers.mli  immediate_repr.ml  immediate_repr.mli  import.ml  is_tail_position.ml  is_tail_position.mli  koka_zero_code_generation.ml  names.ml  (+16 more)
lib/runtime/: runtime.c  runtime.h
lib/translation/: dune  generation.ml  generation.mli  monadic_syntax.ml  monadic_syntax.mli  primitives.ml  primitives.mli  translation.ml  translation.mli
lib/util/: dot_graph.ml  dot_graph.mli  dune  has_multiset.ml  has_multiset.mli  has_multiset_intf.ml  infinite-loop.txt  koka_zero_util.ml  koka_zero_util.mli  monad_utils.ml  monad_utils.mli  monad_utils_intf.ml  multiset.ml  multiset.mli  multiset_intf.ml  non_empty_list.ml  non_empty_list.mli  source_location.ml  source_location.mli  static_error.ml  static_error.mli  string_utils.ml  string_utils.mli
test/: dune  koka-zero.sh  koka_zero_test.ml  my_koka_test.ml  test_parser.ml  test_parser_invalid.ml  test_parser_util.ml  test_parser_util.mli
test/inference/: dune  import.ml  test_inference.ml  test_inference_invalid.ml  util.ml  util.mli
test/parsing/: dune  import.ml  test_parser.ml  test_parser_invalid.ml  util.ml  util.mli
test/rewriting/: dune  import.ml  test_bind_inlining.ml
test/semantics/: compile.sh  dune  koka-zero-config-template.sexp
test/soundness/: dune
test/util/: dune  test_monad_util.ml  test_multiset.ml
(+175 files in other folders)
