(library
 (name koka_zero)
 (public_name koka-zero)
 (libraries
  core
  koka-zero.util
  koka-zero.parsing
  koka-zero.ir.minimal
  koka-zero.inference
  koka-zero.ir.explicit
  koka-zero.evidence-translation
  koka-zero.ir.evidence-passing
  koka-zero.interpreter
  koka-zero.code-generation)
 (preprocess
  (pps ppx_jane)))
