(library
 (name koka_zero)
 (public_name koka-zero)
 (libraries
  core
  koka-zero.util
  koka-zero.parsing
  koka-zero.ir.minimal
  koka-zero.subtyping-inference
  koka-zero.ir.explicit
  koka-zero.evidence-passing.evidence-translation
  koka-zero.evidence-passing.rewriting
  koka-zero.ir.evidence-passing
  koka-zero.interpreter
  koka-zero.code-generation
  koka-zero.clang-invocation)
 (preprocess
  (pps ppx_jane)))
