(library
 (name koka_zero_test)
 (inline_tests)
 (libraries core koka_zero)
 (preprocess
  (pps ppx_jane)))

(env
 (dev
  (flags
   ;; disable:
   ;; warning 40 [name-out-of-scope]: plays badly with ppx_expect
   ;; warning 70 [missing-mli]: don't require these for tests
   (:standard -w +A-48-42-44-40-70-66 -warn-error +A-3))))
