(library
 (name koka_zero_parsing)
 (public_name koka-zero.parsing)
 ;; note the forward dependency on the next pipeline stage (inference)
 (libraries core menhirLib str koka_zero_util koka_zero_inference)
 (preprocess
  (pps ppx_jane)))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --dump))

(env
 (dev
  (flags
   ;; disable:
   ;; 4 [fragile-match] since menhir parsers have hundreds of these
   ;; 70 [missing-mli] since lexers don't neeed these
   (:standard -w +A-48-42-44-4-70 -warn-error +A-3))))
