(library
 (name koka_zero_parsing)
 (public_name koka-zero.parsing)
 ;; note the forward dependency on the next pipeline stage (inference)
 (libraries core menhirLib str koka_zero_util koka_zero_inference)
 (preprocess
  (per_module
   ((pps ppx_jane) syntax simplification koka_zero_parsing parser)
  )))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --dump))

(env
 (dev
  (flags
   ;; disable:
   ;; 4 [fragile-match] since menhir parsers have hundreds of these
   ;; 70 [missing-mli] since lexers don't neeed these
   ;; 40 [name-out-of-scope] since generated sexp conv uses type-directed resolution
   (:standard -w +A-48-42-44-4-70-40 -warn-error +A-3))))
