(library
 (name koka_zero_parsing)
 (public_name koka-zero.parsing)
 (libraries
  core
  menhirLib
  str
  koka_zero_util
  koka_zero_ir_common
  koka_zero_ir_minimal_syntax
  koka_zero_ir_full_syntax)
 (preprocess
  (per_module
   ((pps ppx_jane)
    syntax
    simplification
    koka_zero_parsing
    parser))))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --dump))
